@@ -79,11 +79,18 @@
 #define _INSIDE_CEXP_
 #include "cexpHelp.h"
 
+#include "elfdlmap.h"
+
 #ifdef __rtems__
 #include <sys/socket.h>
 #endif
 
 /*#define  USE_ELF_MEMORY*/
+
+typedef struct FilterArgsRec_ {
+	const char *strtab;
+	uintptr_t   offset;
+} FilterArgsRec, *FilterArgs;
 
 /* filter the symbol table entries we're interested in */
 
@@ -97,10 +104,11 @@
 static const char *
 filter32(void *ext_sym, void *closure)
 {
-Elf32_Sym	*sp=ext_sym;
-char		*strtab=closure;
+Elf32_Sym   *sp     = ext_sym;
+FilterArgs  args    = closure;
+const char	*strtab = args->strtab;
 
-	if ( STB_LOCAL == ELF32_ST_BIND(sp->st_info) )
+	if ( STB_LOCAL == ELF32_ST_BIND(sp->st_info) || SHN_UNDEF == sp->st_shndx )
 		return 0;
 
 	switch (ELF32_ST_TYPE(sp->st_info)) {
@@ -119,9 +127,10 @@ char		*strtab=closure;
 static void
 assign32(void *symp, CexpSym cesp, void *closure)
 {
-Elf32_Sym	*sp=symp;
+Elf32_Sym	*sp     = symp;
+int 		s       = sp->st_size;
+FilterArgs  args    = closure;
 CexpType	t;
-int 		s=sp->st_size;
 
 	cesp->size = s;
 
@@ -160,16 +169,17 @@ int 		s=sp->st_size;
 			break;
 	}
 
-	cesp->value.ptv  = (CexpVal)(uintptr_t)sp->st_value;
+	cesp->value.ptv  = (CexpVal)((uintptr_t)sp->st_value + args->offset);
 }
 
 static const char *
 filter64(void *ext_sym, void *closure)
 {
-Elf64_Sym	*sp=ext_sym;
-char		*strtab=closure;
+Elf64_Sym	*sp     = ext_sym;
+FilterArgs  args    = closure;
+const char	*strtab = args->strtab;
 
-	if ( STB_LOCAL == ELF64_ST_BIND(sp->st_info) )
+	if ( STB_LOCAL == ELF64_ST_BIND(sp->st_info) || SHN_UNDEF == sp->st_shndx )
 		return 0;
 
 	switch (ELF64_ST_TYPE(sp->st_info)) {
@@ -188,9 +198,10 @@ char		*strtab=closure;
 static void
 assign64(void *symp, CexpSym cesp, void *closure)
 {
-Elf64_Sym	*sp=symp;
+Elf64_Sym	*sp     = symp;
+int 		s       = sp->st_size;
+FilterArgs  args    = closure;
 CexpType	t;
-int 		s=sp->st_size;
 
 	cesp->size = s;
 
@@ -229,7 +240,20 @@ int 		s=sp->st_size;
 			break;
 	}
 
-	cesp->value.ptv  = (CexpVal)(uintptr_t)sp->st_value;
+	cesp->value.ptv  = (CexpVal)((uintptr_t)sp->st_value + args->offset);
+}
+
+static unsigned long symcnt(void *symtab, size_t symsz, long nsyms, CexpSymFilterProc filt, void *closure)
+{
+char          *strtab = closure;
+unsigned long rval    = 0;
+
+	while ( nsyms-- ) {
+		if ( filt(symtab, closure) )
+			rval++;
+		symtab += symsz;
+	}
+	return rval;
 }
 
 /* read an ELF file, extract the relevant information and
@@ -240,17 +264,20 @@ int 		s=sp->st_size;
 static CexpSymTbl
 cexpSlurpElf(char *filename)
 {
-Elf_Stream	elf=0;
-Elf_Shdr	*shdr=0;
-Elf_Ehdr    ehdr;
-Pmelf_Shtab  shtab  = 0;
-Pmelf_Symtab symtab = 0;
-CexpSymTbl	rval=0,csymt=0;
-CexpSym		sane;
+Elf_Stream	  elf=0;
+Elf_Shdr	  *shdr=0;
+Elf_Ehdr      ehdr;
+Pmelf_Shtab   shtab  = 0;
+Pmelf_Symtab  symtab = 0;
+CexpSymTbl	  rval=0,csymt=0;
+CexpSym		  sane;
 #if defined(USE_ELF_MEMORY) || defined(HAVE_RCMD)
-char		*buf=0,*ptr=0;
-long		size=0,avail=0,got;
+char		  *buf=0,*ptr=0;
+long		  size=0,avail=0,got;
 #endif
+unsigned long nsyms;
+CexpLinkMap   lmaps = 0, map;
+FilterArgsRec args;
 
 #ifdef HAVE_RCMD
 #ifdef		__rtems__
@@ -352,23 +379,85 @@ char        *fullname = filename;
 		goto cleanup;
 	
 	/* convert the symbol table */
+	lmaps = cexpLinkMapBuild( 0, 0 );
+
+	args.strtab = symtab->strtab;
+	args.offset = 0;
 
 	if ( ELFCLASS64 == ehdr.e_ident[EI_CLASS] ) {
-		csymt=cexpCreateSymTbl(
+		nsyms = symcnt(
 				(void*)symtab->syms.p_t64,
 				sizeof(Elf64_Sym), symtab->nsyms,
-				filter64,assign64,
-				(void*)symtab->strtab);
+				filter64,
+				&args);
 	} else {
-		csymt=cexpCreateSymTbl(
+		nsyms = symcnt(
 				(void*)symtab->syms.p_t32,
 				sizeof(Elf32_Sym), symtab->nsyms,
-				filter32,assign32,
-				(void*)symtab->strtab);
+				filter32,
+				&args);
 	}
+
+	for ( map = lmaps; map; map = map->next ) {
+		nsyms += map->nsyms - map->firstsym;
+	}
+
+	csymt = cexpNewSymTbl( nsyms );
+
 	if ( ! csymt )
 		goto cleanup;
 
+	if ( ELFCLASS64 == ehdr.e_ident[EI_CLASS] ) {
+
+		args.strtab = symtab->strtab;
+		args.offset = 0;
+
+		csymt = cexpAddSymTbl(
+				csymt,
+				(void*)symtab->syms.p_t64,
+				sizeof(Elf64_Sym), symtab->nsyms,
+				filter64,assign64,
+				&args,
+				0);
+		for ( map = lmaps; map; map = map->next ) {
+			args.strtab = map->strtab;
+			args.offset = map->offset;
+			cexpAddSymTbl(
+				csymt,
+				(void*)map->elfsyms + sizeof(Elf64_Sym) * map->firstsym,
+				sizeof(Elf64_Sym), map->nsyms - map->firstsym,
+				filter64, assign64,
+				&args,
+				(map->flags & CEXP_LINK_MAP_STATIC_STRINGS) ? CEXP_SYMTBL_FLAG_NO_STRCPY : 0
+			);
+		}
+	} else {
+
+		args.strtab = symtab->strtab;
+		args.offset = 0;
+
+		csymt = cexpAddSymTbl(
+				csymt,
+				(void*)symtab->syms.p_t32,
+				sizeof(Elf32_Sym), symtab->nsyms,
+				filter32,assign32,
+				&args,
+				0);
+		for ( map = lmaps; map; map = map->next ) {
+			args.strtab = map->strtab;
+			args.offset = map->offset;
+			cexpAddSymTbl(
+				csymt,
+				(void*)map->elfsyms + sizeof(Elf32_Sym) * map->firstsym,
+				sizeof(Elf32_Sym), map->nsyms - map->firstsym,
+				filter32, assign32,
+				&args,
+				(map->flags & CEXP_LINK_MAP_STATIC_STRINGS) ? CEXP_SYMTBL_FLAG_NO_STRCPY : 0
+			);
+		}
+	}
+
+	cexpSortSymTbl( csymt );
 
 #ifndef ELFSYMS_TEST_MAIN
 	/* do a couple of sanity checks */
@@ -389,6 +478,7 @@ char        *fullname = filename;
 	csymt = 0;
 
 cleanup:
+	cexpLinkMapFree(lmaps);
 	pmelf_delsymtab(symtab);
 	pmelf_delshtab(shtab);
 	pmelf_delstrm(elf,0);
